tests/NormalTests/paczka1/small_fuzzy/33455746.err
Error in line 7: S28 A691 256,5
Error in line 15: 7avBU1EidAo S28 615
